edit-method, not label

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -107,6 +107,7 @@ exportMethods(decode)
 exportMethods(dim)
 exportMethods(dispersion)
 exportMethods(dotplot)
+exportMethods(edit)
 exportMethods(encoding)
 exportMethods(enrich)
 exportMethods(features)
@@ -122,7 +123,6 @@ exportMethods(hits)
 exportMethods(html)
 exportMethods(knit_print)
 exportMethods(kwic)
-exportMethods(label)
 exportMethods(labels)
 exportMethods(length)
 exportMethods(ll)
@@ -237,6 +237,7 @@ importFrom(utils,View)
 importFrom(utils,browseURL)
 importFrom(utils,capture.output)
 importFrom(utils,download.file)
+importFrom(utils,edit)
 importFrom(utils,installed.packages)
 importFrom(utils,localeToCharset)
 importFrom(utils,menu)
