in between: editing kwic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,6 +75,7 @@ exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
 exportMethods("[[<-")
+exportMethods("labels<-")
 exportMethods("name<-")
 exportMethods("names<-")
 exportMethods(Cooccurrences)
