from labels to annotations

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: Toolkit for Corpus Analysis
-Version: 0.7.11.9019
-Date: 2019-05-09
+Version: 0.7.11.9020
+Date: 2019-05-13
 Authors@R: c(person("Andreas", "Blaette", role = c("aut", "cre"), email = "andreas.blaette@uni-due.de", comment = c(ORCID = "0000-0001-8970-8010")))
 Imports:
     methods,
@@ -68,6 +68,7 @@ Collate:
     'features.R'
     'context.R'
     'TermDocumentMatrix.R'
+    'annotations.R'
     'as.VCorpus.R'
     'as.markdown.R'
     'kwic.R'
@@ -88,7 +89,6 @@ Collate:
     'highlight.R'
     'html.R'
     'info.R'
-    'label.R'
     'mail.R'
     'means.R'
     'noise.R'
