--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,11 +75,12 @@ exportMethods("+")
 exportMethods("[")
 exportMethods("[[")
 exportMethods("[[<-")
-exportMethods("labels<-")
+exportMethods("annotations<-")
 exportMethods("name<-")
 exportMethods("names<-")
 exportMethods(Cooccurrences)
 exportMethods(aggregate)
+exportMethods(annotations)
 exportMethods(as.DocumentTermMatrix)
 exportMethods(as.TermDocumentMatrix)
 exportMethods(as.VCorpus)
@@ -124,7 +125,6 @@ exportMethods(hits)
 exportMethods(html)
 exportMethods(knit_print)
 exportMethods(kwic)
-exportMethods(labels)
 exportMethods(length)
 exportMethods(ll)
 exportMethods(mail)
