as.TermDocumentMatrix for kwic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ exportClasses(features_cooccurrences)
 exportClasses(features_ngrams)
 exportClasses(hits)
 exportClasses(kwic)
+exportClasses(neighborhood)
 exportClasses(ngrams)
 exportClasses(partition)
 exportClasses(partition_bundle)
