robust corpus constructor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -182,6 +182,7 @@ importFrom(RcppCWB,cqp_dump_subcorpus)
 importFrom(RcppCWB,cqp_get_registry)
 importFrom(RcppCWB,cqp_initialize)
 importFrom(RcppCWB,cqp_is_initialized)
+importFrom(RcppCWB,cqp_list_corpora)
 importFrom(RcppCWB,cqp_query)
 importFrom(RcppCWB,cqp_reset_registry)
 importFrom(RcppCWB,get_cbow_matrix)
