registry_move exported#

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ export(registry_get_name)
 export(registry_get_p_attributes)
 export(registry_get_properties)
 export(registry_get_s_attributes)
+export(registry_move)
 export(registry_reset)
 export(sAttributes)
 export(setTemplate)
