--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,6 +99,7 @@ exportMethods(barplot)
 exportMethods(blapply)
 exportMethods(chisquare)
 exportMethods(colnames)
+exportMethods(concatenate)
 exportMethods(context)
 exportMethods(cooccurrences)
 exportMethods(corpus)
