--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ exportMethods(noise)
 exportMethods(nrow)
 exportMethods(p_attributes)
 exportMethods(partition)
+exportMethods(pmi)
 exportMethods(read)
 exportMethods(round)
 exportMethods(s_attributes)
