--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(as.partitionBundle)
 export(as.utf8)
 export(browse)
 export(check_cqp_query)
+export(concatenate_phrases)
 export(cooccurrences)
 export(data_dir)
 export(flatten)
@@ -90,6 +91,7 @@ exportMethods(as.list)
 exportMethods(as.markdown)
 exportMethods(as.matrix)
 exportMethods(as.partition_bundle)
+exportMethods(as.phrases)
 exportMethods(as.regions)
 exportMethods(as.simple_triplet_matrix)
 exportMethods(as.sparseMatrix)
@@ -99,7 +101,6 @@ exportMethods(barplot)
 exportMethods(blapply)
 exportMethods(chisquare)
 exportMethods(colnames)
-exportMethods(concatenate)
 exportMethods(context)
 exportMethods(cooccurrences)
 exportMethods(corpus)
