class subcorpus exported

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -67,6 +67,7 @@ exportClasses(remote_corpus)
 exportClasses(remote_partition)
 exportClasses(remote_subcorpus)
 exportClasses(slice)
+exportClasses(subcorpus)
 exportClasses(subcorpus_bundle)
 exportClasses(textstat)
 exportMethods("$")
