fast partition_bundle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,6 +138,7 @@ exportMethods(noise)
 exportMethods(nrow)
 exportMethods(p_attributes)
 exportMethods(partition)
+exportMethods(partition_bundle)
 exportMethods(pmi)
 exportMethods(read)
 exportMethods(round)
