--- a/NAMESPACE
+++ b/NAMESPACE
@@ -229,6 +229,7 @@ importFrom(stats,ftable)
 importFrom(stats,setNames)
 importFrom(stats,xtabs)
 importFrom(stringi,stri_enc_mark)
+importFrom(stringi,stri_encode)
 importFrom(stringi,stri_extract_all_boundaries)
 importFrom(stringi,stri_match_all_regex)
 importFrom(tm,DocumentTermMatrix)
