--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(registry_get_properties)
 export(registry_get_s_attributes)
 export(registry_move)
 export(registry_reset)
+export(restore)
 export(sAttributes)
 export(setTemplate)
 export(show_info)
