size,partition_bundle-method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(as.cqp)
 export(as.data.table.bundle)
 export(as.data.table.regions)
 export(as.data.table.textstat)
+export(as.list.bundle)
 export(as.nativeEnc)
 export(as.partitionBundle)
 export(as.utf8)
