--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: 2.7.3
+pandoc: '2.6'
 pkgdown: 1.5.1
 pkgdown_sha: ~
 articles:
   OpenCPU: OpenCPU.html
   vignette: vignette.html
-last_built: 2020-06-25T23:48Z
+last_built: 2020-06-26T12:05Z
 
