--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,8 +3,6 @@
 S3method(as.list,bundle)
 export("%>%")
 export()
-export(.importPolMineCorpus)
-export(Corpus)
 export(as.corpusEnc)
 export(as.cqp)
 export(as.data.table.bundle)
@@ -20,12 +18,12 @@ export(cooccurrences)
 export(data_dir)
 export(flatten)
 export(getEncoding)
-export(getTemplate)
 export(getTerms)
 export(getTokenStream)
 export(get_info)
 export(is.cqp)
 export(is.partition)
+export(mail)
 export(ocpu_exec)
 export(pAttributes)
 export(partitionBundle)
@@ -45,8 +43,8 @@ export(registry_move)
 export(registry_reset)
 export(restore)
 export(sAttributes)
-export(setTemplate)
 export(show_info)
+export(store)
 export(use)
 exportClasses(Cooccurrences)
 exportClasses(bundle)
@@ -131,7 +129,6 @@ exportMethods(knit_print)
 exportMethods(kwic)
 exportMethods(length)
 exportMethods(ll)
-exportMethods(mail)
 exportMethods(merge)
 exportMethods(name)
 exportMethods(names)
@@ -147,12 +144,10 @@ exportMethods(read)
 exportMethods(round)
 exportMethods(s_attributes)
 exportMethods(sample)
-exportMethods(set_template)
 exportMethods(show)
 exportMethods(size)
 exportMethods(sort)
 exportMethods(split)
-exportMethods(store)
 exportMethods(subset)
 exportMethods(summary)
 exportMethods(tail)
@@ -168,7 +163,6 @@ importFrom(DT,replaceData)
 importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
-importFrom(R6,R6Class)
 importFrom(RcppCWB,cl_attribute_size)
 importFrom(RcppCWB,cl_cpos2id)
 importFrom(RcppCWB,cl_cpos2lbound)
@@ -223,6 +217,7 @@ importFrom(magrittr,"%>%")
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(pbapply,pblapply)
+importFrom(pbapply,pbsapply)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
 importFrom(slam,row_sums)
