--- a/NAMESPACE
+++ b/NAMESPACE
@@ -204,6 +204,7 @@ importFrom(data.table,setkey)
 importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
+importFrom(data.table,truelength)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
