regions method introduced as constructor

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,7 @@ exportMethods(partition_bundle)
 exportMethods(pmi)
 exportMethods(ranges)
 exportMethods(read)
+exportMethods(regions)
 exportMethods(round)
 exportMethods(s_attributes)
 exportMethods(sample)
