--- a/.github/workflows/polminer-base.yml
+++ b/.github/workflows/polminer-base.yml
@@ -3,7 +3,7 @@ name: Build PolmineR Build image
 on:
   schedule:
       - cron: "0 0 * * 5"
-  workflow_dispatch
+  workflow_dispatch:
 
 jobs:
   build-baseimage:
