--- a/.github/workflows/polminer-stable.yml
+++ b/.github/workflows/polminer-stable.yml
@@ -39,5 +39,5 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/polmine/polminer:latest
-            ghcr.io/polmine/polminer:${{env.POLMINE_VERSION}}
+            ghcr.io/org/polmine/polminer:latest
+            ghcr.io/org/polmine/polminer:${{env.POLMINE_VERSION}}
