--- a/.github/workflows/polminer-dev.yml
+++ b/.github/workflows/polminer-dev.yml
@@ -4,7 +4,7 @@ on:
   push:
       branches:
           - "dev"
-          
+  workflow_dispatch:
 
 jobs:
   build-devimage:
@@ -41,5 +41,5 @@ jobs:
           push: true
           build-args: branch=dev
           tags: |
-            ghcr.io/org/polmine/polminer-dev:latest
-            ghcr.io/org/polmine/polminer-dev:${{env.POLMINE_VERSION}}
+            ghcr.io/polmine/polminer-dev:latest
+            ghcr.io/polmine/polminer-dev:${{env.POLMINE_VERSION}}
