--- a/.github/workflows/polminer-opencpu.yml
+++ b/.github/workflows/polminer-opencpu.yml
@@ -2,7 +2,7 @@ name: Build polmineR OpenCPU Image
 
 on:
   workflow_run:
-      workflows: ["Build PolmineR Dev Image","Build PolmineR Stable Image"]
+      workflows: ["Build polmineR Dev Image","Build polmineR Stable Image"]
       types:
           - completed
 
@@ -50,8 +50,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/org/polmine/polminer-opencpu:latest
-            ghcr.io/org/polmine/polminer-opencpu:${{env.POLMINE_VERSION_MASTER}}
+            ghcr.io/polmine/polminer-opencpu:latest
+            ghcr.io/polmine/polminer-opencpu:${{env.POLMINE_VERSION_MASTER}}
       -
         name: Build and push Dev
         uses: docker/build-push-action@v2
@@ -63,5 +63,5 @@ jobs:
           push: true
           build-args: PARENT_IMAGE=ghcr.io/polmine/polminer-dev:latest
           tags: |
-            ghcr.io/org/polmine/polminer-opencpu-dev:latest
-            ghcr.io/org/polmine/polminer-opencpu-dev:${{env.POLMINE_VERSION_DEV}}
+            ghcr.io/polmine/polminer-opencpu-dev:latest
+            ghcr.io/polmine/polminer-opencpu-dev:${{env.POLMINE_VERSION_DEV}}
