s_attributes for nested xml

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ importFrom(Matrix,colSums)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,sparseMatrix)
 importFrom(RcppCWB,cl_attribute_size)
+importFrom(RcppCWB,cl_charset_name)
 importFrom(RcppCWB,cl_cpos2id)
 importFrom(RcppCWB,cl_cpos2lbound)
 importFrom(RcppCWB,cl_cpos2rbound)
@@ -182,6 +183,7 @@ importFrom(RcppCWB,cl_regex2id)
 importFrom(RcppCWB,cl_str2id)
 importFrom(RcppCWB,cl_struc2cpos)
 importFrom(RcppCWB,cl_struc2str)
+importFrom(RcppCWB,corpus_data_dir)
 importFrom(RcppCWB,cqp_dump_subcorpus)
 importFrom(RcppCWB,cqp_get_registry)
 importFrom(RcppCWB,cqp_initialize)
@@ -192,6 +194,7 @@ importFrom(RcppCWB,cqp_reset_registry)
 importFrom(RcppCWB,get_cbow_matrix)
 importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,region_matrix_to_ids)
+importFrom(RcppCWB,s_attribute_decode)
 importFrom(data.table,as.data.table)
 importFrom(data.table,between)
 importFrom(data.table,copy)
