subsetting nested corpora

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -194,6 +194,7 @@ importFrom(RcppCWB,cqp_reset_registry)
 importFrom(RcppCWB,get_cbow_matrix)
 importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,region_matrix_to_ids)
+importFrom(RcppCWB,s_attr_regions)
 importFrom(RcppCWB,s_attribute_decode)
 importFrom(data.table,as.data.table)
 importFrom(data.table,between)
@@ -205,6 +206,7 @@ importFrom(data.table,fread)
 importFrom(data.table,key)
 importFrom(data.table,melt.data.table)
 importFrom(data.table,rbindlist)
+importFrom(data.table,setDT)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setindexv)
 importFrom(data.table,setkey)
