terms() implemented for corpus class #180

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ importFrom(data.table,setkeyv)
 importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(data.table,truelength)
+importFrom(fs,path)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
