rework of class structure

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -226,6 +226,7 @@ importFrom(graphics,text)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(knitr,knit_print)
+importFrom(lifecycle,deprecate_warn)
 importFrom(magrittr,"%>%")
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
