--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,8 @@ importFrom(RcppCWB,cl_str2id)
 importFrom(RcppCWB,cl_struc2cpos)
 importFrom(RcppCWB,cl_struc2str)
 importFrom(RcppCWB,corpus_data_dir)
+importFrom(RcppCWB,corpus_info_file)
+importFrom(RcppCWB,corpus_registry_dir)
 importFrom(RcppCWB,cqp_dump_subcorpus)
 importFrom(RcppCWB,cqp_get_registry)
 importFrom(RcppCWB,cqp_initialize)
@@ -216,6 +218,7 @@ importFrom(data.table,setnames)
 importFrom(data.table,setorderv)
 importFrom(data.table,truelength)
 importFrom(fs,path)
+importFrom(fs,path_expand)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
