registry args use obj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -186,6 +186,7 @@ importFrom(RcppCWB,cl_struc2str)
 importFrom(RcppCWB,corpus_data_dir)
 importFrom(RcppCWB,corpus_info_file)
 importFrom(RcppCWB,corpus_registry_dir)
+importFrom(RcppCWB,corpus_s_attributes)
 importFrom(RcppCWB,cqp_dump_subcorpus)
 importFrom(RcppCWB,cqp_get_registry)
 importFrom(RcppCWB,cqp_initialize)
