--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ importFrom(RcppCWB,cl_str2id)
 importFrom(RcppCWB,cl_struc2cpos)
 importFrom(RcppCWB,cl_struc2str)
 importFrom(RcppCWB,corpus_data_dir)
+importFrom(RcppCWB,corpus_full_name)
 importFrom(RcppCWB,corpus_info_file)
 importFrom(RcppCWB,corpus_registry_dir)
 importFrom(RcppCWB,corpus_s_attributes)
