cpos(),matrix-method uses RcppCWB::ranges_to_cpos()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -197,6 +197,7 @@ importFrom(RcppCWB,cqp_query)
 importFrom(RcppCWB,cqp_reset_registry)
 importFrom(RcppCWB,get_cbow_matrix)
 importFrom(RcppCWB,get_region_matrix)
+importFrom(RcppCWB,ranges_to_cpos)
 importFrom(RcppCWB,region_matrix_context)
 importFrom(RcppCWB,region_matrix_to_ids)
 importFrom(RcppCWB,s_attr_regions)
