as.speeches() for nested corpora #198

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -200,6 +200,8 @@ importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,ranges_to_cpos)
 importFrom(RcppCWB,region_matrix_context)
 importFrom(RcppCWB,region_matrix_to_ids)
+importFrom(RcppCWB,s_attr_is_descendent)
+importFrom(RcppCWB,s_attr_is_sibling)
 importFrom(RcppCWB,s_attr_regions)
 importFrom(RcppCWB,s_attribute_decode)
 importFrom(data.table,as.data.table)
