cp() method when restoring files #108

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(browse)
 export(check_cqp_query)
 export(concatenate_phrases)
 export(cooccurrences)
+export(cp)
 export(data_dir)
 export(flatten)
 export(getEncoding)
