--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: polmineR
 Type: Package
 Title: Verbs and Nouns for Corpus Analysis
-Version: 0.8.5.9028
-Date: 2021-05-04
+Version: 0.8.6
+Date: 2021-05-05
 Authors@R: c(
   person("Andreas", "Blaette", role = c("aut", "cre"), email = "andreas.blaette@uni-due.de", comment = c(ORCID = "0000-0001-8970-8010")),
   person("Christoph", "Leonhardt", role = "ctb"),
@@ -49,7 +49,7 @@ Suggests:
     curl
 VignetteBuilder: knitr
 Description: Package for corpus analysis using the Corpus Workbench 
-    ('CWB', <http://cwb.sourceforge.net/>) as an efficient back end for indexing
+    ('CWB', <https://cwb.sourceforge.io>) as an efficient back end for indexing
     and querying large corpora. The package offers functionality to flexibly create
     subcorpora and to carry out basic statistical operations (count, co-occurrences
     etc.). The original full text of documents can be reconstructed and inspected at
