building vignette works

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -180,6 +180,7 @@ importFrom(RcppCWB,cl_id2cpos)
 importFrom(RcppCWB,cl_id2freq)
 importFrom(RcppCWB,cl_id2str)
 importFrom(RcppCWB,cl_lexicon_size)
+importFrom(RcppCWB,cl_load_corpus)
 importFrom(RcppCWB,cl_regex2id)
 importFrom(RcppCWB,cl_str2id)
 importFrom(RcppCWB,cl_struc2cpos)
@@ -187,6 +188,9 @@ importFrom(RcppCWB,cl_struc2str)
 importFrom(RcppCWB,corpus_data_dir)
 importFrom(RcppCWB,corpus_full_name)
 importFrom(RcppCWB,corpus_info_file)
+importFrom(RcppCWB,corpus_p_attributes)
+importFrom(RcppCWB,corpus_properties)
+importFrom(RcppCWB,corpus_property)
 importFrom(RcppCWB,corpus_registry_dir)
 importFrom(RcppCWB,corpus_s_attributes)
 importFrom(RcppCWB,cqp_dump_subcorpus)
@@ -194,6 +198,7 @@ importFrom(RcppCWB,cqp_get_registry)
 importFrom(RcppCWB,cqp_initialize)
 importFrom(RcppCWB,cqp_is_initialized)
 importFrom(RcppCWB,cqp_list_corpora)
+importFrom(RcppCWB,cqp_load_corpus)
 importFrom(RcppCWB,cqp_query)
 importFrom(RcppCWB,cqp_reset_registry)
 importFrom(RcppCWB,get_cbow_matrix)
