speeding up split() and get_token_stream() for partition_bundle

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -254,6 +254,7 @@ importFrom(stats,formula)
 importFrom(stats,ftable)
 importFrom(stats,setNames)
 importFrom(stats,xtabs)
+importFrom(stringi,stri_c)
 importFrom(stringi,stri_enc_mark)
 importFrom(stringi,stri_encode)
 importFrom(stringi,stri_extract_all_boundaries)
