use function for trimming context obj

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(restore)
 export(sAttributes)
 export(show_info)
 export(store)
+export(trim)
 export(use)
 exportClasses(Cooccurrences)
 exportClasses(bundle)
