size for nested corpora #206

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -210,6 +210,7 @@ importFrom(RcppCWB,region_matrix_to_ids)
 importFrom(RcppCWB,s_attr_is_descendent)
 importFrom(RcppCWB,s_attr_is_sibling)
 importFrom(RcppCWB,s_attr_regions)
+importFrom(RcppCWB,s_attr_relationship)
 importFrom(RcppCWB,s_attribute_decode)
 importFrom(data.table,as.data.table)
 importFrom(data.table,between)
