programming against subset() with quosures #212

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -82,6 +82,7 @@ exportMethods("[")
 exportMethods("[[")
 exportMethods("[[<-")
 exportMethods("annotations<-")
+exportMethods("encoding<-")
 exportMethods("name<-")
 exportMethods("names<-")
 exportMethods(Cooccurrences)
@@ -248,6 +249,10 @@ importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
 importFrom(pbapply,pblapply)
 importFrom(pbapply,pbsapply)
+importFrom(rlang,enquo)
+importFrom(rlang,eval_tidy)
+importFrom(rlang,quo_get_expr)
+importFrom(rlang,quo_set_expr)
 importFrom(slam,as.simple_triplet_matrix)
 importFrom(slam,col_sums)
 importFrom(slam,row_sums)
