--- a/NAMESPACE
+++ b/NAMESPACE
@@ -213,6 +213,9 @@ importFrom(RcppCWB,s_attr_is_sibling)
 importFrom(RcppCWB,s_attr_regions)
 importFrom(RcppCWB,s_attr_relationship)
 importFrom(RcppCWB,s_attribute_decode)
+importFrom(cli,cli_process_done)
+importFrom(cli,cli_process_start)
+importFrom(cli,col_blue)
 importFrom(data.table,as.data.table)
 importFrom(data.table,between)
 importFrom(data.table,copy)
