as.DocumentTermMatrix() more efficient

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ importFrom(RcppCWB,s_attribute_decode)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_process_done)
 importFrom(cli,cli_process_start)
+importFrom(cli,cli_progress_step)
 importFrom(cli,col_blue)
 importFrom(data.table,as.data.table)
 importFrom(data.table,between)
@@ -269,6 +270,7 @@ importFrom(stringi,stri_enc_mark)
 importFrom(stringi,stri_encode)
 importFrom(stringi,stri_extract_all_boundaries)
 importFrom(stringi,stri_match_all_regex)
+importFrom(stringi,stri_sub)
 importFrom(tm,DocumentTermMatrix)
 importFrom(tm,TermDocumentMatrix)
 importFrom(tm,as.DocumentTermMatrix)
