utility fn capitalize()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(as.nativeEnc)
 export(as.partitionBundle)
 export(as.utf8)
 export(browse)
+export(capitalize)
 export(check_cqp_query)
 export(concatenate_phrases)
 export(cooccurrences)
