--- a/NAMESPACE
+++ b/NAMESPACE
@@ -214,6 +214,7 @@ importFrom(RcppCWB,s_attr_regions)
 importFrom(RcppCWB,s_attr_relationship)
 importFrom(RcppCWB,s_attribute_decode)
 importFrom(cli,cli_alert_danger)
+importFrom(cli,cli_alert_info)
 importFrom(cli,cli_process_done)
 importFrom(cli,cli_process_start)
 importFrom(cli,cli_progress_step)
