--- a/NAMESPACE
+++ b/NAMESPACE
@@ -217,8 +217,12 @@ importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_process_done)
 importFrom(cli,cli_process_start)
+importFrom(cli,cli_progress_bar)
+importFrom(cli,cli_progress_done)
 importFrom(cli,cli_progress_step)
+importFrom(cli,cli_progress_update)
 importFrom(cli,col_blue)
+importFrom(cli,col_cyan)
 importFrom(data.table,as.data.table)
 importFrom(data.table,between)
 importFrom(data.table,copy)
