only markdown tests left

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -261,6 +261,7 @@ importFrom(pbapply,pblapply)
 importFrom(pbapply,pbsapply)
 importFrom(rlang,enquo)
 importFrom(rlang,eval_tidy)
+importFrom(rlang,is_quosure)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,quo_set_expr)
 importFrom(slam,as.simple_triplet_matrix)
