s_attributes() returns NA if s_attr does not have values #234

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -215,6 +215,7 @@ importFrom(RcppCWB,s_attr_relationship)
 importFrom(RcppCWB,s_attribute_decode)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_warning)
 importFrom(cli,cli_process_done)
 importFrom(cli,cli_process_start)
 importFrom(cli,cli_progress_bar)
