is_nested() for slot xml corpus corpus class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(getTokenStream)
 export(get_info)
 export(is.cqp)
 export(is.partition)
+export(is_nested)
 export(mail)
 export(ocpu_exec)
 export(pAttributes)
