--- a/NAMESPACE
+++ b/NAMESPACE
@@ -188,6 +188,7 @@ importFrom(RcppCWB,cl_regex2id)
 importFrom(RcppCWB,cl_str2id)
 importFrom(RcppCWB,cl_struc2cpos)
 importFrom(RcppCWB,cl_struc2str)
+importFrom(RcppCWB,cl_struc_values)
 importFrom(RcppCWB,corpus_data_dir)
 importFrom(RcppCWB,corpus_full_name)
 importFrom(RcppCWB,corpus_info_file)
