new method tree_structure()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -162,6 +162,7 @@ exportMethods(summary)
 exportMethods(tail)
 exportMethods(terms)
 exportMethods(tooltips)
+exportMethods(tree_structure)
 exportMethods(view)
 exportMethods(weigh)
 import(methods)
@@ -215,6 +216,7 @@ importFrom(RcppCWB,s_attr_is_sibling)
 importFrom(RcppCWB,s_attr_regions)
 importFrom(RcppCWB,s_attr_relationship)
 importFrom(RcppCWB,s_attribute_decode)
+importFrom(cli,bg_br_yellow)
 importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
@@ -227,6 +229,7 @@ importFrom(cli,cli_progress_step)
 importFrom(cli,cli_progress_update)
 importFrom(cli,col_blue)
 importFrom(cli,col_cyan)
+importFrom(cli,col_red)
 importFrom(data.table,as.data.table)
 importFrom(data.table,between)
 importFrom(data.table,copy)
@@ -306,9 +309,12 @@ importFrom(xml2,"xml_text<-")
 importFrom(xml2,read_html)
 importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
+importFrom(xml2,xml_child)
+importFrom(xml2,xml_contents)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_parent)
 importFrom(xml2,xml_remove)
 importFrom(xml2,xml_text)
+importFrom(xml2,xml_type)
