arg fmt of tooltips: assign tooltips for cpos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -250,6 +250,7 @@ importFrom(data.table,setorderv)
 importFrom(data.table,truelength)
 importFrom(fs,path)
 importFrom(fs,path_expand)
+importFrom(grDevices,colors)
 importFrom(graphics,dotchart)
 importFrom(graphics,grid)
 importFrom(graphics,par)
