href fn introduced

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(getEncoding)
 export(getTerms)
 export(getTokenStream)
 export(get_info)
+export(href)
 export(is.cqp)
 export(is.partition)
 export(is_nested)
