--- a/NAMESPACE
+++ b/NAMESPACE
@@ -212,6 +212,7 @@ importFrom(RcppCWB,get_region_matrix)
 importFrom(RcppCWB,ranges_to_cpos)
 importFrom(RcppCWB,region_matrix_context)
 importFrom(RcppCWB,region_matrix_to_ids)
+importFrom(RcppCWB,region_matrix_to_struc_matrix)
 importFrom(RcppCWB,s_attr_is_descendent)
 importFrom(RcppCWB,s_attr_is_sibling)
 importFrom(RcppCWB,s_attr_regions)
