argument vocab implemented / R CMD check ok

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -280,6 +280,7 @@ importFrom(slam,row_sums)
 importFrom(slam,simple_triplet_matrix)
 importFrom(stats,formula)
 importFrom(stats,ftable)
+importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stats,xtabs)
 importFrom(stringi,stri_c)
