debug GitHub Action  #256

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -41,26 +41,27 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
           
-#########
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::rcmdcheck, any::covr
           needs: check
 
-      - name: Install GermaParl2
+      - name: Install further dependencies
         run: |
+          remotes::install_cran("rcmdcheck")
           install.packages(pkgs = "GermaParl2", contriburl = "https://polmine.github.io/drat/src/contrib", type = "source")
         shell: Rscript {0}
         
       - uses: r-lib/actions/setup-pandoc@v2
 
-      - uses: r-lib/actions/check-r-package@v2
+      - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_REMOTE_: false
         run: |
           options(crayon.enabled = TRUE)
           Sys.setlocale("LC_CTYPE", "en_US.UTF-8")
+          rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")
+        shell: Rscript {0}
 
       - name: Test coverage
         run: |
