--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -56,6 +56,7 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
 
       - name: Test coverage
+        if: runner.os != 'Windows'
         run: |
           covr::codecov(
             quiet = FALSE,
