corpus() handles corpora defined in multiple registry files #267

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -223,6 +223,7 @@ importFrom(cli,cli_alert_danger)
 importFrom(cli,cli_alert_info)
 importFrom(cli,cli_alert_success)
 importFrom(cli,cli_alert_warning)
+importFrom(cli,cli_bullets)
 importFrom(cli,cli_process_done)
 importFrom(cli,cli_process_start)
 importFrom(cli,cli_progress_bar)
