setDTthreads(2) if on CRAN #274

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -244,6 +244,7 @@ importFrom(data.table,key)
 importFrom(data.table,melt.data.table)
 importFrom(data.table,rbindlist)
 importFrom(data.table,setDT)
+importFrom(data.table,setDTthreads)
 importFrom(data.table,setcolorder)
 importFrom(data.table,setindexv)
 importFrom(data.table,setkey)
