--- a/NAMESPACE
+++ b/NAMESPACE
@@ -286,6 +286,7 @@ importFrom(stats,na.omit)
 importFrom(stats,setNames)
 importFrom(stats,xtabs)
 importFrom(stringi,stri_c)
+importFrom(stringi,stri_c_list)
 importFrom(stringi,stri_enc_mark)
 importFrom(stringi,stri_encode)
 importFrom(stringi,stri_extract_all_boundaries)
